--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -8342,6 +8342,80 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "```markdown\n",
+        "# 1. What a confidence interval is\n",
+        "\n",
+        "A **confidence interval** gives a **range of plausible values for a population parameter** (like a mean, proportion, or rate) based on your sample data.\n",
+        "\n",
+        "- Instead of saying \"the death rate is 2%,\" a CI says:\n",
+        "\n",
+        "  > \"Based on the data we observed, we are 95% confident that the true death rate lies between 1% and 4%.\"\n",
+        "\n",
+        "- The **95%** is the confidence level — it tells us how certain we are about the interval.\n",
+        "\n",
+        "  > **Important:** It does **not** mean there's a 95% chance the true value is in the interval. The true value is fixed; the interval varies if you repeat the experiment many times. Over many samples, 95% of intervals would contain the true value.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 2. How it's calculated (conceptually)\n",
+        "\n",
+        "1. Take a sample and compute a **point estimate** (e.g., sample mean, proportion, or death rate).\n",
+        "\n",
+        "2. Estimate the **standard error (SE)** — how much your sample estimate would vary if you repeated the experiment many times.\n",
+        "   - For a proportion: `SE = sqrt(p(1-p)/n)`\n",
+        "   - For a mean: `SE = s/sqrt(n)`\n",
+        "\n",
+        "3. Multiply the SE by a **critical value** from a probability distribution (e.g., 1.96 for 95% CI if using normal approximation).\n",
+        "\n",
+        "4. Construct the interval:\n",
+        "   ```\n",
+        "   CI = point estimate ± (critical value × SE)\n",
+        "   ```\n",
+        "\n",
+        "- Example (death rate = 2%, n = 100):\n",
+        "  - SE ≈ 0.014\n",
+        "  - 95% CI ≈ 0.02 ± 1.96 × 0.014 → (0.002, 0.048) → 0.2% to 4.8%\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 3. Why confidence intervals are useful\n",
+        "\n",
+        "- **Quantify uncertainty:** Point estimates alone don't tell you how reliable they are.\n",
+        "- **Compare groups:** Non-overlapping CIs often suggest statistically significant differences.\n",
+        "- **Communicate results:** Reporting \"2% ± CI\" is more informative than \"2%\" alone.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 4. Interpreting CIs in your expedition example\n",
+        "\n",
+        "Suppose:\n",
+        "\n",
+        "```\n",
+        "SIZE_BIN <5 → death_rate = 1.2%\n",
+        "ci_lower = 0.2%, ci_upper = 4.1%\n",
+        "```\n",
+        "\n",
+        "Interpretation:\n",
+        "\n",
+        "> \"Based on the expeditions data, we are 95% confident that the true death rate for expeditions with fewer than 5 people is between 0.2% and 4.1%.\"\n",
+        "\n",
+        "- The **width** of the CI tells you about **uncertainty**:\n",
+        "  - Narrow CI → more precise estimate\n",
+        "  - Wide CI → less data or more variability\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 5. Key points to remember\n",
+        "\n",
+        "1. CIs depend on **sample size** — larger samples → narrower CIs.\n",
+        "2. Higher confidence → wider interval (e.g., 99% CI is wider than 95%).\n",
+        "3. The CI is about the **parameter, not the sample**."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -8696,6 +8770,79 @@
         "   - Categorical + 1 group → binomial test\n",
         "   - Categorical + 2 groups → two-proportion z-test\n",
         "   - Categorical + 3+ groups → chi-square test"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Hypothesis Test Decision Tree\n",
+        "\n",
+        "```\n",
+        "Start\n",
+        "  |\n",
+        "  |---> How many groups are you comparing?\n",
+        "         |\n",
+        "         |\n",
+        "         |-- 1 group\n",
+        "         |     |\n",
+        "         |     |---> What type of data?\n",
+        "         |            |\n",
+        "         |            |-- Continuous\n",
+        "         |            |     |\n",
+        "         |            |     └──> One-sample t-test\n",
+        "         |            |          (Compare sample mean to population mean)\n",
+        "         |            |\n",
+        "         |            └-- Categorical (success/failure)\n",
+        "         |                  |\n",
+        "         |                  ├──> One-sample proportion test\n",
+        "         |                  |\n",
+        "         |                  └──> Binomial test\n",
+        "         |                       (small sample / rare events)\n",
+        "         |\n",
+        "         |\n",
+        "         |-- 2 groups\n",
+        "         |     |\n",
+        "         |     |---> Data type?\n",
+        "         |            |\n",
+        "         |            |-- Continuous\n",
+        "         |            |     |\n",
+        "         |            |     ├──> Two-sample t-test (independent)\n",
+        "         |            |     |\n",
+        "         |            |     └──> Paired t-test (dependent/paired samples)\n",
+        "         |            |\n",
+        "         |            └-- Categorical\n",
+        "         |                  |\n",
+        "         |                  ├──> Two-sample proportion test (counts)\n",
+        "         |                  |\n",
+        "         |                  └──> Fisher exact test (small counts)\n",
+        "         |\n",
+        "         |\n",
+        "         └-- 3 or more groups\n",
+        "               |\n",
+        "               |---> Data type?\n",
+        "                      |\n",
+        "                      |-- Continuous ──────> ANOVA\n",
+        "                      |\n",
+        "                      |-- Non-normal / ranks ──> Kruskal-Wallis\n",
+        "                      |\n",
+        "                      └-- Categorical ──────> Chi-square test of independence\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Quick Reference Table\n",
+        "\n",
+        "| Number of Groups | Data Type | Test |\n",
+        "|-----------------|-----------|------|\n",
+        "| 1 group | Continuous | One-sample t-test |\n",
+        "| 1 group | Categorical | One-sample proportion test / Binomial test |\n",
+        "| 2 groups | Continuous (independent) | Two-sample t-test |\n",
+        "| 2 groups | Continuous (paired) | Paired t-test |\n",
+        "| 2 groups | Categorical | Two-sample proportion test / Fisher exact test |\n",
+        "| 3+ groups | Continuous (normal) | ANOVA |\n",
+        "| 3+ groups | Non-normal/ranks | Kruskal-Wallis |\n",
+        "| 3+ groups | Categorical | Chi-square test |"
       ]
     },
     {
