fix and sync venv

--- a/2024-05-14_coffee_taste_test/2024-05-14_coffee_taste_test.ipynb
+++ b/2024-05-14_coffee_taste_test/2024-05-14_coffee_taste_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ada9c9d5",
    "metadata": {},
    "outputs": [
@@ -3845,7 +3845,11 @@
    "source": [
     "coffee_survey\n",
     "\n",
-    "# Dataset contains submissions of individuals"
+    "# This dataset contains survey responses on coffee consumption habits, \n",
+    "# preferences, and demographics. It includes information on age, coffee \n",
+    "# type, brewing method, purchase habits, flavor preferences, caffeine \n",
+    "# consumption, spending behavior, and personal attributes like gender, \n",
+    "# education, and political affiliation."
    ]
   },
   {
@@ -7682,7 +7686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f714ceeb",
    "metadata": {},
    "outputs": [
@@ -7758,7 +7762,8 @@
     }
    ],
    "source": [
-    "coffee_survey.info()"
+    "with pd.option_context('display.max_rows'):\n",
+    "  coffee_survey.info()"
    ]
   },
   {
@@ -8209,11 +8214,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27de79e2",
+   "id": "7ee0d972",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find row with most records filled."
+    "# Z score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16c4436b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correlation"
    ]
   }
  ],
